platform/gateway-api-config/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: istio
  labels:
    app.kubernetes.io/name: istio
    app.kubernetes.io/part-of: k8s-playground
spec:
  controllerName: istio.io/gateway-controller
